--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Add your site or application content here -->
 
 <main class="container">
-  <div class="row grid justify-content-between">
+  <div class="row grid justify-content-between row-cols-3 row-cols-md-4 row-cols-lg-7"> <!--To manage number per row by size of screen-->
   </div>
 </main>
   
