raw base of timer and tries countdown is working

--- a/index.html
+++ b/index.html
@@ -24,9 +24,15 @@
 
 <body>
   <!-- Add your site or application content here -->
+<header>
+  <div>
+    <h2>Time limit</h2>
+    <h3><span id="time"></span></h3>
+  </div>
+</header>
 
-<main class="container">
-  <div class="row grid justify-content-between row-cols-3 row-cols-md-4 row-cols-lg-7"> <!--To manage number per row by size of screen-->
+<main class="container-fluid">
+  <div class="row grid justify-content-between"> <!--To manage number per row by size of screen-->
   </div>
 </main>
   
