added logo, title and game info inside the card space created earlier

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Rainbow 6 Siege Memory Game</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -25,9 +25,14 @@
 <body>
   <!-- Add your site or application content here -->
 <header class="container-fluid">
-  <div class="row text-center">
-    <h2>Time limit</h2>
-    <h3><span id="time"></span> SEC</h3>
+  <div class="row text-center align-items-center">
+    <div>
+      <img src="../R6_Pairs/img/Background/Logo1.png" alt="Logo Rainbow 6" id="logoR6">
+    </div>
+    <div class="titles text-center align-items-center mx-auto">
+      <h1>Memory Game</h1>
+      <h2>Rainbow 6 Siege<br>Operators edition</h2>
+    </div>
   </div>
 </header>
 
