winning and losing page completed

--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
       <button class="playButton" onclick="play()">Play</button>
     </div>
   </div>
-  <div class="hidden" id="winning">
-    <h3>You Won !</h3>
-    <button class="playButton" onclick="play()">Replay</button>
+  <div class="row hidden" id="winning">
+    <div class="col-12 m-auto text-center align-items-center"><h3>CONGRATULATIONS</h3></div>
+    <div class="col-12 gif m-auto text-center align-items-center"><img src="../R6_Pairs/img/Background/win.gif" alt="winning gif"></div>
+    <div class="col-12 m-auto text-center align-items-center"><button class="playButton" onclick="play()">Replay</button></div>
   </div>
-  <div class="hidden" id="losing">
-    <h3>You lost</h3>
-    <button class="playButton" onclick="play()">Replay</button>
+  <div class="row hidden" id="losing">
+    <div class="col-12 m-auto text-center align-items-center"><h3>SORRY...</h3></div>
+    <div class="col-12 gif m-auto text-center align-items-center"><img src="../R6_Pairs/img/Background/lose.gif" alt="losing gif"></div>
+    <div class="col-12 m-auto text-center align-items-center"><button class="playButton" onclick="play()">Replay</button></div>
   </div>
 </main>
   
